# grahin

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  alembic.ini  debug_guide.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run_tests.py  test_api.py  test_sqlalchemy.py
alembic/versions/: 3c5b6500e237_initial_migration.py  a46be0ae733d_initial_migration.py
app/: main.py
app/api/: auth.py  chat.py  deps.py  files.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  conversation.py  file.py  session.py  user.py
app/schemas/: __init__.py  conversation.py  file.py  user.py
app/services/: __init__.py  file_processor.py  rag_service.py
scripts/: init_db.py  setup_dev.sh  start_dev.py  wsl_setup.sh
tests/: conftest.py  test_auth.py  test_chat.py  test_files.py  test_integration.py  test_models.py  test_performance.py
