[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "rag-app"
version = "1.0.0"
description = "AI-powered RAG application with user authentication"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.9"
redis = "^5.2.1"
celery = "^5.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-anthropic = "^0.3.0"
langchain-huggingface = "^0.1.2"
pillow = "^10.1.0"
PyPDF2 = "^3.0.1"
python-docx = "^1.1.0"
python-magic = "^0.4.27"
structlog = "^23.2.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.0"
email-validator = "^2.1.0"
python-dotenv = "^1.0.0"
sentence-transformers = "^3.3.1"
huggingface-hub = "^0.27.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/rag-app"
Repository = "https://github.com/yourusername/rag-app"
Issues = "https://github.com/yourusername/rag-app/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "celery.*",
    "chromadb.*",
    "langchain.*",
    "magic.*",
    "PIL.*",
    "PyPDF2.*",
    "redis.*",
    "uvicorn.*",
]
ignore_missing_imports = true
